--- a/src/app/features/landingpage/components/navbar/navbar.component.scss
+++ b/src/app/features/landingpage/components/navbar/navbar.component.scss
@@ -21,11 +21,10 @@
 }
 
 .nav-social{
-  i{
-    cursor: pointer;
-    transition: color 0.5s;
-    color: #FFFFFF;
-  }
+
+    i{
+     color: #FFFFFF;
+    }
   i:hover{
    color: #D10024;
   }
@@ -111,3 +110,14 @@
     padding-right: 12px;
   }
 }
+.i18n{
+  button{
+    background-color: transparent !important;
+    color: #FFFFFF;
+    transition: 0.5s;
+    &:hover{
+      color: #D10024;
+    }
+  }
+}
+
