--- a/src/app/features/landingpage/components/product-list/product-list.component.html
+++ b/src/app/features/landingpage/components/product-list/product-list.component.html
@@ -3,7 +3,7 @@
 <div class="list-header">
   <div class="d-flex justify-content-between">
      <div class="title">
-      <h3>Meilleurs produits</h3>
+      <h3 class="product-title">Nos produits</h3>
      </div>
      <div class="categories">
       <ul class="cat-list">
