--- a/src/app/features/landingpage/pages/home/home.component.html
+++ b/src/app/features/landingpage/pages/home/home.component.html
@@ -1,3 +1,6 @@
 <app-navbar></app-navbar>
 <app-header></app-header>
 <app-product-list></app-product-list>
+<app-about-us></app-about-us>
+<app-footer></app-footer>
+
