--- a/src/app/features/landingpage/components/about-us/about-us.component.html
+++ b/src/app/features/landingpage/components/about-us/about-us.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-7">
+    <div class="col-12 col-md-7">
       <div class="pt-5">
           <img src="assets/images/logo.png" alt="logo" />
           <h3 class="mt-5 title">Qui sommes-nous </h3>
@@ -10,7 +10,7 @@
           </div>
       </div>
     </div>
-    <div class="col-5">
+    <div class="col-12 col-md-5">
       <img src="assets/images/about.png" alt="about">
     </div>
   </div>
