--- a/src/app/features/landingpage/components/product-card/product-card.component.html
+++ b/src/app/features/landingpage/components/product-card/product-card.component.html
@@ -1,4 +1,4 @@
-<div class="card card-body product-card p-2">
-  <img [src]="product.img" [alt]="product.name">
-  <label for="">{{product.name}}</label>
+<div class="card card-body product-card p-2" (click)="navigateToDetails(product)">
+  <img [src]="product.img" [alt]="product.name" class="img-fluid">
+  <p>{{product.name}}</p>
 </div>
