--- a/src/app/features/landingpage/components/product-card/product-card.component.scss
+++ b/src/app/features/landingpage/components/product-card/product-card.component.scss
@@ -1,6 +1,10 @@
 .product-card{
-  height: 230px;
+  cursor: pointer;
+  height: 240px;
   img{
-    max-height: 180px !important;
+    height: 180px !important;
+  }
+  &:hover{
+    background-color: #e8e6e6;
   }
 }
