--- a/src/app/features/landingpage/pages/home/home.component.html
+++ b/src/app/features/landingpage/pages/home/home.component.html
@@ -1,6 +1,7 @@
-<app-navbar></app-navbar>
+<app-navbar [products]="products"></app-navbar>
 <app-header></app-header>
 <app-product-list></app-product-list>
 <app-about-us></app-about-us>
-<app-footer></app-footer>
+<app-news></app-news>
+
 
