--- a/src/app/features/landingpage/components/product-list/product-list.component.scss
+++ b/src/app/features/landingpage/components/product-list/product-list.component.scss
@@ -33,7 +33,7 @@
         left: 0;
       }
     }
-    li{
+    li:hover{
       text-decoration: underline;
       cursor: pointer;
       color: #D10024;
@@ -46,7 +46,31 @@
 
 }
 
+.selector{
+  width: 100%;
+  height: 2px;
+  background-color: #D10024;
+  margin-top: -2px;
+}
+
 .product-title{
   font-size: 36px;
   font-weight: 700;
+}
+
+@media only screen and (max-width: 768px) {
+  .categories{
+    ul{
+      margin-left: -30px !important;
+      li{
+        font-weight: 500;
+        font-size: 10px;
+        a{
+        letter-spacing: 0.10em;
+
+        }
+
+      }}
+  }
+
 }
